# backtalk-old2

./: Cargo.toml  readme.md
examples/: hello_world.rs
src/: error.rs  filter.rs  guard.rs  lib.rs  params.rs  request.rs  resource.rs  router.rs  server.rs  service.rs
src/api/: error.rs  mod.rs  params.rs  request.rs  resource.rs  router.rs  util.rs
