[package]
name = "backtalk"
version = "0.1.0"
authors = ["Robert Lord <robert@lord.io>"]

[dependencies]
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
futures = "0.1.2"
serde = "0.8"
serde_json = "0.8"
hyper = { git = "https://github.com/hyperium/hyper", rev = "4cccf0f9a52db08899913f85d032ad68671b10b5" }
